# ros-line-follower-robot

./: CMakeLists.txt  README.md  package.xml
cad/: Base Tier 1.SLDPRT  Base Tier 2.STL  Caster Wheel.SLDPRT  Caster Wheel.STL  LiPo Mockup.SLDPRT  PSU Mockup.SLDPRT  Pong Ball.SLDPRT  RPI Camera Mount.SLDPRT  RPI Camera Mount.STL  RPI Camera Swivel.STL  Spacer.SLDPRT  Tier Spacer.SLDPRT
cad-files/: Base Tier 1.SLDPRT  Base Tier 1.STL  Base Tier 2.SLDPRT  RPI Camera Swivel.SLDPRT
cad-files/Third Party/: pingpongwheelBeefy.stl
cad-files/Third Party/DG01D/: DG01D.CATPart  DG01D.CATProduct  Motor DC.CATPart  MotorModel.step.SLDPRT  Yellow Case 2.CATPart
cad-files/Third Party/Raspberry_Pi_3_B_B+_Pi_2_B_and_Pi_1_B+_case_with_VESA_mounts_and_more/: README.txt  rpi3-bottom.stp.SLDPRT
cad-files/Third Party/gear-motor-dg01d-a130-1.snapshot.1/: MotorModel.iv
cad-files/Third Party/modulo-driver-motor-a-pasos-1.snapshot.7/: placa_controlador_nueva v56.SLDASM  placa_controlador_nueva v56.step
cad-files/Third Party/raspberry-pi-camera-module-v2-1.snapshot.3/: 70521906_02.ipt  70521906_06.ipt  CCD.ipt  (+9 more)
cad/Third Party/: Plastic Wheel.SLDPRT
config/: line_detector_config.yaml  line_follower_config.yaml  motor_driver_config.yaml  rate_config.yaml  rpi_camera_config.yaml
config/jet-cli/: config.json
frontend/: .eslintcache  package.json
frontend/public/: index.html
frontend/src/: index.js
launch/: line_follower.launch  vision_test.launch
nodes/: line_follower_node.py
rviz/: line_follower.rviz
scripts/: line_detector_node.py  line_follower_node.py  motor_driver_node.py
sketch/motorDriverNode/: motorDriverNode.ino
(+54 files in other folders)
